reworked regrouping and plotting of hotspots

--- a/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
@@ -104,7 +104,7 @@ p
 ```{r}
 # include random data:
 
-random_hotspot_data = read.table(gzfile("data/rand_cluster_size_counts.tsv.gz"), header=F, sep="\t")
+random_hotspot_data = read.table(gzfile(paste0("data/rand_cluster_size_counts.win_",  HOTSPOT_WINSIZE, ".tsv.gz")), header=F, sep="\t")
 
 colnames(random_hotspot_data) = c('trial', 'hotspot_size', 'num_hotspots')
 
