--- a/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
@@ -22,7 +22,8 @@ HOTSPOT_WINSIZE = "1e5"
 
 ```{r}
 
-hotspot_info = read.table( paste0("plot.hotspots.win_", HOTSPOT_WINSIZE, ".tsv.w_20_neighbors.hotspot_virus_sample_counts.tsv"), header=T, sep="\t", stringsAsFactors = F)
+hotspot_info = read.table( paste0("plot.hotspots.win_", HOTSPOT_WINSIZE, ".tsv.w_20_neighbors.regrouped_by_insert_gene.hotspot_virus_sample_counts.tsv"), header=T, sep="\t", stringsAsFactors = F)
+# ex. plot.hotspots.win_1e5.tsv.w_20_neighbors.regrouped_by_insert_gene.hotspot_virus_sample_counts.tsv
 
 head(hotspot_info)
 
@@ -30,8 +31,13 @@ head(hotspot_info)
 
 ```{r}
 
-hotspot_insertions = read.table(paste0("hotspots.win_", HOTSPOT_WINSIZE, ".tsv.w_20_neighbors"), 
+hotspot_insertions = read.table(paste0("hotspots.win_", HOTSPOT_WINSIZE, ".tsv.w_20_neighbors.regrouped_by_insert_gene"), 
                                 header=T, sep="\t", stringsAsFactors = F)
+# ex. hotspots.win_1e5.tsv.w_20_neighbors.regrouped_by_insert_gene
+
+# use the regrouped hotspot name as the hotspot name:
+
+hotspot_insertions = hotspot_insertions %>% mutate(hotspot = gene_regrouped_hotspot_name)
 
 head(hotspot_insertions)
 ```
@@ -39,9 +45,9 @@ head(hotspot_insertions)
 
 ```{r}
 
-insertion_hotspot_assignments = read.table(paste0("hotspots.win_", HOTSPOT_WINSIZE, ".tsv"), header=T, sep="\t", stringsAsFactors = F)
+#insertion_hotspot_assignments = read.table(paste0("hotspots.win_", HOTSPOT_WINSIZE, ".tsv"), header=T, sep="\t", stringsAsFactors = F)
 
-head(insertion_hotspot_assignments)
+#head(insertion_hotspot_assignments)
 ```
 
 
@@ -57,7 +63,8 @@ hotspot_info %>% select(hotspot) %>% unique() %>% nrow()
 
 ```{r}
 
-hotspot_sum_sample_virus_counts = hotspot_info %>% select(hotspot_name, virus_genome, hotspot_virus_tally) %>% group_by(hotspot_name) %>% summarize(sum_sample_viruses = sum(hotspot_virus_tally)) %>% arrange(desc(sum_sample_viruses)) %>% ungroup()
+hotspot_sum_sample_virus_counts = hotspot_info %>% select(hotspot, virus_genome, hotspot_virus_tally) %>% group_by(hotspot) %>% 
+         summarize(sum_sample_viruses = sum(hotspot_virus_tally)) %>% arrange(desc(sum_sample_viruses)) %>% ungroup()
 
 hotspot_sum_sample_virus_counts
 
@@ -66,7 +73,7 @@ hotspot_sum_sample_virus_counts
 
 ```{r}
 
-hotspot_sum_sample_virus_counts %>% ggplot(aes(x=reorder(hotspot_name, -1*sum_sample_viruses), sum_sample_viruses)) + geom_col() +
+hotspot_sum_sample_virus_counts %>% ggplot(aes(x=reorder(hotspot, -1*sum_sample_viruses), sum_sample_viruses)) + geom_col() +
   ggtitle("sum(virus,sample) ranked hotspots") +
    scale_y_continuous(trans='log10')
 
@@ -126,7 +133,7 @@ p
 ```{r}
 
 
-top_hotspots = hotspot_info %>% group_by(hotspot_name) %>% summarize(sum_insertions = sum(hotspot_virus_tally)) %>% ungroup()
+top_hotspots = hotspot_info %>% group_by(hotspot) %>% summarize(sum_insertions = sum(hotspot_virus_tally)) %>% ungroup()
 
 top_hotspots %>% arrange(desc(sum_insertions))
 
@@ -137,7 +144,7 @@ top_hotspots %>% arrange(desc(sum_insertions))
 
 ```{r}
 
- hotspot_info =  left_join(hotspot_info, top_hotspots, by='hotspot_name')
+ hotspot_info =  left_join(hotspot_info, top_hotspots, by='hotspot')
 
 ```
 
@@ -145,7 +152,7 @@ top_hotspots %>% arrange(desc(sum_insertions))
 ```{r}
 
 hotspot_info %>% filter(sum_insertions >= 10) %>% 
-  ggplot(aes(x=reorder(hotspot_name, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+  ggplot(aes(x=reorder(hotspot, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
   
 
@@ -158,7 +165,7 @@ hotspot_info %>% filter(sum_insertions >= 10) %>%
 
 hotspot_info %>% filter(sum_insertions >= 10) %>% 
   mutate(virus_genome = ifelse(grepl("HPV", virus_genome), "HPV", virus_genome)) %>%
-  ggplot(aes(x=reorder(hotspot_name, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+  ggplot(aes(x=reorder(hotspot, -1*sum_insertions), y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
   
 
@@ -174,13 +181,13 @@ MIN_HOTSPOT_SIZE = 11
 
 hotspot_info_top = hotspot_info %>% filter(sum_insertions >= MIN_HOTSPOT_SIZE) 
 
-ordered_hotspot_names = hotspot_info_top %>% arrange(desc(sum_insertions)) %>% select(hotspot_name) %>% unique() %>% pull(hotspot_name)
+ordered_hotspots = hotspot_info_top %>% arrange(desc(sum_insertions)) %>% select(hotspot) %>% unique() %>% pull(hotspot)
 
-hotspot_info_top$hotspot_name = factor(hotspot_info_top$hotspot_name, levels=ordered_hotspot_names)
+hotspot_info_top$hotspot = factor(hotspot_info_top$hotspot, levels=ordered_hotspots)
 
 hotspot_info_top %>% 
   #mutate(virus_genome = ifelse(grepl("HPV", virus_genome), "HPV", virus_genome)) %>%
-  ggplot(aes(x=hotspot_name, y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+  ggplot(aes(x=hotspot, y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 
@@ -188,7 +195,7 @@ hotspot_info_top %>%
 
 hotspot_by_virus_plot = hotspot_info_top %>% 
   mutate(virus_genome = ifelse(grepl("HPV", virus_genome), "HPV", virus_genome)) %>%
-  ggplot(aes(x=hotspot_name, y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
+  ggplot(aes(x=hotspot, y=hotspot_virus_tally, fill=virus_genome)) + geom_col() +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 hotspot_by_virus_plot
@@ -202,12 +209,13 @@ hotspots_of_interest = hotspot_info_top %>% select(hotspot) %>% unique() %>% pul
 
 
 
-hotspot_insertion_seqtypes = left_join(hotspot_info_top %>% select(hotspot, hotspot_name),
-                               hotspot_insertions %>% filter(hotspot %in% hotspots_of_interest) %>% select(hotspot, seqtype),
-                               by='hotspot')
+hotspot_insertion_seqtypes = left_join(hotspot_info_top %>% select(hotspot),
+                               hotspot_insertions %>% filter(gene_regrouped_hotspot_name %in% hotspots_of_interest) %>% 
+                                 select(hotspot = gene_regrouped_hotspot_name, seqtype),
+                                 by=c('hotspot') )
 
 
-hotspot_seqtype_frac_info = hotspot_insertion_seqtypes %>% group_by(hotspot_name, seqtype) %>% tally() %>% mutate(pct=prop.table(n)) 
+hotspot_seqtype_frac_info = hotspot_insertion_seqtypes %>% group_by(hotspot, seqtype) %>% tally() %>% mutate(pct=prop.table(n)) 
 
 hotspot_seqtype_frac_info
 ```
@@ -216,10 +224,10 @@ hotspot_seqtype_frac_info
 
 ```{r}
 
-hotspot_seqtype_frac_info$hotspot_name = factor(hotspot_seqtype_frac_info$hotspot_name, levels=ordered_hotspot_names)
+hotspot_seqtype_frac_info$hotspot = factor(hotspot_seqtype_frac_info$hotspot, levels=ordered_hotspots)
 
 
-hotspot_by_seqtype_plot = hotspot_seqtype_frac_info %>% ggplot(aes(x=hotspot_name, y=pct, fill=seqtype)) + geom_col() +
+hotspot_by_seqtype_plot = hotspot_seqtype_frac_info %>% ggplot(aes(x=hotspot, y=pct, fill=seqtype)) + geom_col() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
  hotspot_by_seqtype_plot 
@@ -230,12 +238,13 @@ hotspot_by_seqtype_plot = hotspot_seqtype_frac_info %>% ggplot(aes(x=hotspot_nam
 ```{r}
 #  cohort representation
 
-hotspot_insertion_cohorts = left_join(hotspot_info_top %>% select(hotspot, hotspot_name),
-                               hotspot_insertions %>% filter(hotspot %in% hotspots_of_interest) %>% select(hotspot, cohort),
+hotspot_insertion_cohorts = left_join(hotspot_info_top %>% select(hotspot, hotspot),
+                               hotspot_insertions %>% filter(gene_regrouped_hotspot_name %in% hotspots_of_interest) %>% 
+                                 select(hotspot = gene_regrouped_hotspot_name, cohort),
                                by='hotspot')
 
 
-hotspot_cohort_frac_info = hotspot_insertion_cohorts %>% group_by(hotspot_name, cohort) %>% tally() %>% mutate(pct=prop.table(n)) 
+hotspot_cohort_frac_info = hotspot_insertion_cohorts %>% group_by(hotspot, cohort) %>% tally() %>% mutate(pct=prop.table(n)) 
 
 hotspot_cohort_frac_info
 
@@ -251,10 +260,10 @@ hotspot_cohort_frac_info
 ```{r}
 
 
-hotspot_cohort_frac_info$hotspot_name = factor(hotspot_cohort_frac_info$hotspot_name, levels=ordered_hotspot_names)
+hotspot_cohort_frac_info$hotspot = factor(hotspot_cohort_frac_info$hotspot, levels=ordered_hotspots)
 
 
-hotspot_cohort_frac_info %>% ggplot(aes(x=hotspot_name, y=pct, fill=cohort)) + geom_col() +
+hotspot_cohort_frac_info %>% ggplot(aes(x=hotspot, y=pct, fill=cohort)) + geom_col() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 
@@ -271,12 +280,13 @@ hotspot_cohort_frac_info %>% ggplot(aes(x=hotspot_name, y=pct, fill=cohort)) + g
 hotspot_insertions = hotspot_insertions  %>% mutate(proj_name = ifelse(cohort=='TCGA', paste(cohort, project, sep="^"), cohort))
 
 
-hotspot_insertion_projects = left_join(hotspot_info_top %>% select(hotspot, hotspot_name),
-                               hotspot_insertions %>% filter(hotspot %in% hotspots_of_interest) %>% select(hotspot, proj_name),
+hotspot_insertion_projects = left_join(hotspot_info_top %>% select(hotspot, hotspot),
+                               hotspot_insertions %>% filter(gene_regrouped_hotspot_name %in% hotspots_of_interest) %>% 
+                                 select(hotspot=gene_regrouped_hotspot_name, proj_name),
                                by='hotspot')
 
 
-hotspot_project_frac_info = hotspot_insertion_projects %>% group_by(hotspot_name, proj_name) %>% tally() %>% mutate(pct=prop.table(n)) 
+hotspot_project_frac_info = hotspot_insertion_projects %>% group_by(hotspot, proj_name) %>% tally() %>% mutate(pct=prop.table(n)) 
 
 hotspot_project_frac_info
 
@@ -288,10 +298,10 @@ hotspot_project_frac_info
 ```{r}
 
 
-hotspot_project_frac_info$hotspot_name = factor(hotspot_project_frac_info$hotspot_name, levels=ordered_hotspot_names)
+hotspot_project_frac_info$hotspot = factor(hotspot_project_frac_info$hotspot, levels=ordered_hotspots)
 
 
-hotspot_by_project_plot = hotspot_project_frac_info %>% ggplot(aes(x=hotspot_name, y=pct, fill=proj_name)) + geom_col() +
+hotspot_by_project_plot = hotspot_project_frac_info %>% ggplot(aes(x=hotspot, y=pct, fill=proj_name)) + geom_col() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 hotspot_by_project_plot
@@ -325,8 +335,8 @@ ggsave(pg, file="top_hotspots_by_attributes.pdf", width=12, height=15)
 
 
 ```{r}
-hotspot_info_top_with_insertions = left_join(hotspot_info_top %>% select(hotspot_name, hotspot) %>% unique(),
-                                             insertion_hotspot_assignments %>% select(sample_id, contig, hotspot),
+hotspot_info_top_with_insertions = left_join(hotspot_info_top %>% select(hotspot) %>% unique(),
+                                             hotspot_insertions %>% select(sample_id, contig, hotspot),
                                              by='hotspot'
                                              )
 
@@ -355,7 +365,7 @@ nrow(hotspot_info_top_with_insertions_and_CNV)
 
 # choose peak cnv copy number where multiple insertions analyzed for a single sample
 
-hotspot_info_top_with_insertions_and_CNV = hotspot_info_top_with_insertions_and_CNV  %>% group_by(hotspot_name, sample_id) %>% arrange(desc(copy_number)) %>% filter(row_number()==1) %>% ungroup()
+hotspot_info_top_with_insertions_and_CNV = hotspot_info_top_with_insertions_and_CNV  %>% group_by(hotspot, sample_id) %>% arrange(desc(copy_number)) %>% filter(row_number()==1) %>% ungroup()
 
 
 nrow(hotspot_info_top_with_insertions_and_CNV)
@@ -364,17 +374,17 @@ nrow(hotspot_info_top_with_insertions_and_CNV)
 
 ```{r}
 
-hotspot_info_top_with_insertions_and_CNV$hotspot_name = factor(hotspot_info_top_with_insertions_and_CNV$hotspot_name, levels=ordered_hotspot_names)
+hotspot_info_top_with_insertions_and_CNV$hotspot = factor(hotspot_info_top_with_insertions_and_CNV$hotspot, levels=ordered_hotspots)
 
 ```
 
 
 ```{r}
 
-hotspot_cnv_boxplot = hotspot_info_top_with_insertions_and_CNV %>% ggplot(aes(x=hotspot_name, y=copy_number)) + geom_boxplot() +
+hotspot_cnv_boxplot = hotspot_info_top_with_insertions_and_CNV %>% ggplot(aes(x=hotspot, y=copy_number)) + geom_boxplot() +
   geom_hline(yintercept=2, linetype=2, color='purple') +
-   theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
+   theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_y_continuous(trans='log10')
 
 hotspot_cnv_boxplot 
 
@@ -409,7 +419,7 @@ nrow(hotspot_info_top_with_insertions_and_CNV_and_EXPR)
 
 # take single highest expr quantile for sample,hotspot combo
 hotspot_info_top_with_insertions_and_CNV_and_EXPR = hotspot_info_top_with_insertions_and_CNV_and_EXPR %>%
-  group_by(hotspot_name, sample_id) %>% arrange(desc(expr_quantile)) %>% filter(row_number()==1) %>% ungroup()
+  group_by(hotspot, sample_id) %>% arrange(desc(expr_quantile)) %>% filter(row_number()==1) %>% ungroup()
 
 nrow(hotspot_info_top_with_insertions_and_CNV_and_EXPR)
 
@@ -419,14 +429,14 @@ nrow(hotspot_info_top_with_insertions_and_CNV_and_EXPR)
 
 ```{r}
 
-hotspot_info_top_with_insertions_and_CNV_and_EXPR$hotspot_name = factor(hotspot_info_top_with_insertions_and_CNV_and_EXPR$hotspot_name, levels=ordered_hotspot_names)
+hotspot_info_top_with_insertions_and_CNV_and_EXPR$hotspot = factor(hotspot_info_top_with_insertions_and_CNV_and_EXPR$hotspot, levels=ordered_hotspots)
 
 ```
 
 
 ```{r}
 
-hotspot_expr_quantile_plot = hotspot_info_top_with_insertions_and_CNV_and_EXPR %>% ggplot(aes(x=hotspot_name, y=expr_quantile)) + geom_boxplot() +
+hotspot_expr_quantile_plot = hotspot_info_top_with_insertions_and_CNV_and_EXPR %>% ggplot(aes(x=hotspot, y=expr_quantile)) + geom_boxplot() +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 hotspot_expr_quantile_plot
@@ -443,7 +453,7 @@ chr8:127790761^MYC~PVT1_1  3 cnv and 0.57 expr quantile
 What other samples have multiple hotspot insertions?
 
 ```{r}
-sample_ids_mult_hotspots = hotspot_info_top_with_insertions_and_CNV_and_EXPR %>% select(hotspot_name, sample_id) %>%  unique() %>%
+sample_ids_mult_hotspots = hotspot_info_top_with_insertions_and_CNV_and_EXPR %>% select(hotspot, sample_id) %>%  unique() %>%
   group_by(sample_id) %>% tally() %>% filter(n>1) %>% ungroup()
   
 sample_ids_mult_hotspots
@@ -452,7 +462,7 @@ sample_ids_mult_hotspots
 ```{r}
 
 hotspot_info_top_with_insertions_and_CNV_and_EXPR %>% filter(sample_id %in% sample_ids_mult_hotspots$sample_id) %>%
-  select(sample_id, hotspot_name, copy_number, expr_quantile) %>% arrange(sample_id)
+  select(sample_id, hotspot, copy_number, expr_quantile) %>% arrange(sample_id)
 
 ```
 
@@ -515,14 +525,14 @@ pg3
 ```{r}
 
 ordered_hotspot_insertions = hotspot_insertions %>% 
-  select(hotspot, hotspot_sample_counts_redef_list) %>% unique() 
+  select(hotspot, hotspot_sample_counts_redef, hotspot_sample_counts_redef_list) %>% unique() 
 
 ordered_hotspot_insertions$hotspot_chromosome = sapply(ordered_hotspot_insertions$hotspot, function(x) {
   str_split(x, ":")[[1]][1]
 } )
 
 ordered_hotspot_insertions$hotspot_coord = sapply(ordered_hotspot_insertions$hotspot, function(x) {
-  as.numeric(str_split(x, ":")[[1]][2])
+  as.numeric(str_split(x, ":|\\^")[[1]][2])
 } )
 
 ordered_hotspot_insertions = ordered_hotspot_insertions %>% arrange(hotspot_chromosome, hotspot_coord)
@@ -531,6 +541,17 @@ n = nrow(ordered_hotspot_insertions)
 lookback = 10
 
 ```
+
+
+```{r}
+
+# peak at chr8 hotspot
+
+# ordered_hotspot_insertions %>% filter(grepl("^chr8:", hotspot)) %>% view()
+
+
+```
+
 
 ```{r}
 
