--- a/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
+++ b/Combined_VIF_analysis/HotspotsRevisited/AnalyzeHotspots.Rmd
@@ -219,7 +219,11 @@ hotspot_seqtype_frac_info = hotspot_insertion_seqtypes %>% group_by(hotspot, seq
 
 hotspot_seqtype_frac_info
 ```
+```{r}
+hotspots_of_interest
 
+
+```
 
 
 ```{r}
@@ -238,7 +242,7 @@ hotspot_by_seqtype_plot = hotspot_seqtype_frac_info %>% ggplot(aes(x=hotspot, y=
 ```{r}
 #  cohort representation
 
-hotspot_insertion_cohorts = left_join(hotspot_info_top %>% select(hotspot, hotspot),
+hotspot_insertion_cohorts = left_join(hotspot_info_top %>% select(hotspot),
                                hotspot_insertions %>% filter(gene_regrouped_hotspot_name %in% hotspots_of_interest) %>% 
                                  select(hotspot = gene_regrouped_hotspot_name, cohort),
                                by='hotspot')
@@ -595,6 +599,214 @@ hotspot_sample_jaccard
 ```
 
 
+# try matrix/heatmap format instead of barchart.
+
+```{r}
+
+p_hotspot_project_frac_info = hotspot_project_frac_info  %>% ggplot(aes(x=hotspot, y=proj_name, fill=pct)) + geom_tile() +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+p_hotspot_project_frac_info
+
+```
+
+```{r}
 
 
+hotspot_info_top %>% ggplot(aes(x=hotspot, y=virus_genome, fill=hotspot_virus_tally)) + geom_tile()  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+
+```
+
+
+
+
+```{r}
+
+p_hotspot_virus_frac_rep = hotspot_info_top %>% mutate(frac_insertions = hotspot_virus_tally/sum_insertions) %>%
+  ggplot(aes(x=hotspot, y=virus_genome, fill=frac_insertions)) + geom_tile()  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+
+p_hotspot_virus_frac_rep
+
+```
+
+
+```{r}
+# Bring all the plots together.
+
+pg3 = plot_grid(
+          hotspot_by_seqtype_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
+          p_hotspot_project_frac_info  + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
+          hotspot_cnv_boxplot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
+          hotspot_expr_quantile_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
+          p_hotspot_virus_frac_rep +  theme(axis.text.x = element_text(angle = 90, hjust = 1)),
+          ncol = 1, 
+          align='v',
+          axis='lr',
+          rel_heights=c(0.15, 0.15, 
+                        0.1,
+                        0.1, 
+                        0.5
+                        ))
+
+pg3
+
+
+```
+
+
+
+# examine virus representation among the different project cohorts
+
+```{r}
+
+top_hotspots = hotspot_info_top %>% select(hotspot) %>% unique() %>% pull(hotspot)
+
+
+virus_project_hotspot_rep = hotspot_insertions %>% 
+  filter(hotspot %in% top_hotspots) %>%
+  mutate(proj_name = ifelse(cohort=='GTEx', paste(cohort, project), proj_name)) %>%
+  select(hotspot, virus_genome, cohort, proj_name, participant) %>% unique() %>%
+    group_by(hotspot, virus_genome, cohort, proj_name) %>% tally(name='num_participants') %>% ungroup()
+
+virus_project_hotspot_rep$hotspot = factor(virus_project_hotspot_rep$hotspot, levels=ordered_hotspots)
+
+
+```
+
+
+```{r}
+
+hotspots_in_plot = virus_project_hotspot_rep %>% select(hotspot) %>% unique()
+
+```
+
+
+```{r}
+
+
+ccle_virus_data = left_join(hotspots_in_plot, 
+                                virus_project_hotspot_rep %>% filter(cohort=='CCLE') 
+                                )  
+  
+ccle_virus_data$hotspot = factor(ccle_virus_data$hotspot, levels=ordered_hotspots)
+
+ccle_virus_rep_plot =   ccle_virus_data %>%  ggplot(aes(x=hotspot, y=virus_genome, fill=num_participants)) + geom_tile() + ggtitle("CCLE")  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+ccle_virus_rep_plot + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+```{r}
+
+tcga_virus_data = left_join(hotspots_in_plot, 
+                                virus_project_hotspot_rep %>% filter(cohort=='TCGA') ) 
+
+tcga_virus_data$hotspot = factor(tcga_virus_data$hotspot, levels=ordered_hotspots)
+
+tcga_virus_rep_plot = tcga_virus_data %>% 
+  ggplot(aes(x=hotspot, y=virus_genome, fill=num_participants)) + geom_tile() + ggtitle("TCGA")  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+tcga_virus_rep_plot  + theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+
+```
+
+
+
+
+
+```{r}
+
+gtex_virus_data  = left_join(hotspots_in_plot, 
+                                 virus_project_hotspot_rep %>% filter(cohort=='GTEx') ) %>% 
+  mutate(virus_projname = paste(virus_genome, proj_name)) 
+
+gtex_virus_data$hotspot = factor(gtex_virus_data$hotspot, levels=ordered_hotspots)
+
+gtex_virus_rep_plot =  gtex_virus_data %>%  ggplot(aes(x=hotspot, y=virus_projname, fill=num_participants)) + geom_tile() + ggtitle("GTEx")  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+gtex_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+
+
+
+
+```{r}
+
+natgen_virus_data = left_join(hotspots_in_plot, 
+                                  virus_project_hotspot_rep %>% filter(cohort=='NATGEN2015') ) 
+
+
+natgen_virus_data$hotspot = factor(natgen_virus_data$hotspot, levels=ordered_hotspots)
+
+natgen_virus_rep_plot = natgen_virus_data %>% ggplot(aes(x=hotspot, y=virus_genome, fill=num_participants)) + geom_tile() + ggtitle("NATGEN2015")  +
+  scale_fill_gradient(low="lightblue", high="black", na.value = 'white') 
+
+
+natgen_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+```{r}
+
+pg4 = plot_grid(
+          gtex_virus_rep_plot  + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
+          ccle_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()),
+           natgen_virus_rep_plot + theme(axis.title.x=element_blank(),axis.text.x=element_blank(), axis.ticks.x=element_blank()), 
+          tcga_virus_rep_plot +  theme(axis.text.x = element_text(angle = 90, hjust = 1)),
+          ncol = 1, 
+          align='v',
+          axis='lr',
+          rel_heights=c(0.1,
+                        0.1,
+                        0.1, 
+                        0.3
+                        ))
+
+pg4
+
+```
+
+```{r}
+
+ggsave(pg4, file="virus_cohort_representation.pdf", width=25, height=15)
+
+
+```
+
+
+
+# Examine participant and virus representation according to cohort.
+
+```{r}
+
+natgen2015_sample_virus_info = hotspot_insertions %>% filter(cohort=="NATGEN2015") %>% 
+   group_by(sample_id, virus) %>% summarize(max_total_rpm = max(total_rpm)) %>%
+    select(sample_id, virus, max_total_rpm) %>% unique()
+
+natgen2015_sample_virus_info %>%
+     ggplot(aes(x=sample_id, y=virus, fill=log10(max_total_rpm+1))) + geom_tile() +
+     scale_fill_gradient(low="lightblue", high="black", na.value = 'white') +
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+
+```
+```{r}
+
+# heatmap for above virus/sample associations, clustered.
+natgen2015_sample_virus_info_matrix = natgen2015_sample_virus_info %>% spread(key=virus, value=max_total_rpm, fill=0)
+
+write.table(natgen2015_sample_virus_info_matrix, file="natgen2015_sample_virus_info.matrix", quote=F, sep="\t", row.names=F)
+
+# ~/GITHUB/trinityrnaseq/Analysis/DifferentialExpression/PtR  -m natgen2015_sample_virus_info.matrix --heatmap --log2 --heatmap_colorscheme "white,blue" --heatmap_scale_limits "0,4"
+
+```
 
