--- a/Combined_VIF_analysis/Insertion_and_EXPR_effects/InsertionExpressionEffects.Rmd
+++ b/Combined_VIF_analysis/Insertion_and_EXPR_effects/InsertionExpressionEffects.Rmd
@@ -25,7 +25,7 @@ insertions_data = insertions_data %>% select(sample_id, contig, humanchr, human_
 
 insertions_w_expression_data = read.table("virus_insertions_unfiltered.10kb.expression_region_analysis.tsv", header=T, sep="\t", stringsAsFactors = F)
 
-insertions_w_expression_data = insertions_w_expression_data %>% filter(cohort=="TCGA")
+#insertions_w_expression_data = insertions_w_expression_data %>% filter(cohort=="TCGA")
 
 #insertions_w_expression_data = insertions_w_expression_data %>% filter(cohort=="GTEx")
 
@@ -62,7 +62,7 @@ plot(density(insertions_w_expression_data$expr_quantile))
 
 ```{r}
 
-randomized_data = read.table("virus_insertions_unfiltered.10kb.expression_region_analysis.RANDOMIZED.tsv", header=T, sep="\t", stringsAsFactors = F)
+randomized_data = read.table(gzfile("virus_insertions_unfiltered.10kb.expression_region_analysis.RANDOMIZED.tsv.gz"), header=T, sep="\t", stringsAsFactors = F)
 
 nrow(randomized_data)
 
